fixing profile card (admins pages) + tooltip for goal

--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.AddMealsFragment"
     android:background="#ffffff"
+    android:id="@+id/root"
     android:layoutDirection="ltr">
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
@@ -146,6 +147,8 @@
                     android:layout_marginTop="8dp"
                     android:gravity="right"
                     android:text="الهدف الرياضي"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textColor="@color/blackGrey"
                     android:textSize="11dp"
                     app:layout_constraintEnd_toStartOf="@+id/imageView9"
@@ -153,13 +156,15 @@
 
                 <TextView
                     android:id="@+id/tvprofileActivity"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="30dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginRight="2dp"
                     android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:text="عالي"
                     android:textColor="@color/blackGrey"
                     android:textSize="12dp"
@@ -251,7 +256,7 @@
                     android:layout_height="25dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/balance"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -260,8 +265,8 @@
                     android:id="@+id/imageView11"
                     android:layout_width="22dp"
                     android:layout_height="25dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginRight="6dp"
                     android:layout_marginTop="16dp"
                     android:src="@drawable/text_height"
                     app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
@@ -271,8 +276,8 @@
                     android:id="@+id/imageView12"
                     android:layout_width="22dp"
                     android:layout_height="25dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginRight="6dp"
                     android:layout_marginTop="16dp"
                     android:src="@drawable/calendar_2"
                     app:layout_constraintEnd_toStartOf="@+id/tvWeight"
@@ -282,8 +287,8 @@
                     android:id="@+id/imageView13"
                     android:layout_width="22dp"
                     android:layout_height="25dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
                     android:layout_marginTop="16dp"
                     android:src="@drawable/running"
                     app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
@@ -315,8 +320,8 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginRight="12dp"
                     android:text="الوزن"
                     android:textSize="6sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -337,8 +342,8 @@
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="58dp"
-                    android:layout_marginRight="58dp"
+                    android:layout_marginEnd="57dp"
+                    android:layout_marginRight="57dp"
                     android:text="الطول"
                     android:textSize="6sp"
                     app:layout_constraintEnd_toStartOf="@+id/textView13"
@@ -348,8 +353,8 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="12dp"
-                    android:layout_marginEnd="62dp"
-                    android:layout_marginRight="62dp"
+                    android:layout_marginEnd="64dp"
+                    android:layout_marginRight="64dp"
                     android:text="النشاط"
                     android:textSize="6sp"
                     app:layout_constraintEnd_toStartOf="@+id/textView14"
