--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -79,14 +79,12 @@
             android:id="@+id/relative"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
             android:background="@color/md_white_1000"
             app:layout_constraintBottom_toTopOf="@+id/spinnerUser"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <TextView
-                android:id="@+id/textView18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cairo_semibold"
@@ -130,6 +128,8 @@
                 android:spinnerMode="dropdown"
                 android:layout_alignParentLeft="true" />
         </RelativeLayout>
+        <!--android:id="@+id/root"-->
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -150,6 +150,8 @@
                 android:layout_marginTop="8dp"
                 android:gravity="right"
                 android:text="الهدف الرياضي"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@color/blackGrey"
                 android:textSize="11sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView9"
@@ -161,8 +163,8 @@
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="16dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginRight="2dp"
                 android:layout_marginTop="16dp"
                 android:text="عالي"
                 android:textColor="@color/blackGrey"
@@ -264,8 +266,8 @@
                 android:id="@+id/imageView11"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/text_height"
                 app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
@@ -275,8 +277,8 @@
                 android:id="@+id/imageView12"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/calendar_2"
                 app:layout_constraintEnd_toStartOf="@+id/tvWeight"
@@ -286,8 +288,8 @@
                 android:id="@+id/imageView13"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/running"
                 app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
@@ -330,8 +332,8 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="60dp"
-                android:layout_marginRight="60dp"
+                android:layout_marginEnd="55dp"
+                android:layout_marginRight="55dp"
                 android:text="العمر"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView12"
@@ -341,8 +343,8 @@
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="58dp"
-                android:layout_marginRight="58dp"
+                android:layout_marginEnd="55dp"
+                android:layout_marginRight="55dp"
                 android:text="الطول"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView13"
@@ -352,8 +354,8 @@
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="12dp"
-                android:layout_marginEnd="62dp"
-                android:layout_marginRight="62dp"
+                android:layout_marginEnd="58dp"
+                android:layout_marginRight="58dp"
                 android:text="النشاط"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView14"
