--- a/app/src/main/res/menu/admin_nav.xml
+++ b/app/src/main/res/menu/admin_nav.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/diet"
         android:icon="@drawable/toolbar_diet"
-        android:title="البرنامج الغذائي"/>
+        android:title="الوجبات"/>
 
 
     <item
