--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -575,14 +575,14 @@
 
     </com.luseen.spacenavigation.SpaceNavigationView>
 
-    <VideoView
-    android:id="@+id/video"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentBottom="true"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    <!--<VideoView-->
+    <!--android:id="@+id/video"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 
 
 </RelativeLayout>
